--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -5,7 +5,6 @@
     height: 100%;
     background-color: var(--background-color-2);
     margin: auto;
-    overflow: hidden;
 }
 .container p{
     color: #ffff;
@@ -118,14 +117,19 @@
 
 /* Form */
 .formContainer{
-
+    max-width: 700px;
+    height: 100%;
+    margin: 0 auto;
     padding: 15px;
-    position: absolute;
     top: 100vh;
+    position: relative;
     background: rgb(179,214,240);
     background: linear-gradient(0deg, rgba(179,214,240,1) 0%, rgba(14,78,126,1) 100%);
     border-top-left-radius: 50% 8%;
     border-top-right-radius: 50% 8%;
+}
+.formContainer::-webkit-scrollbar{
+    display: none;
 }
 .formContainer p{
     color: #fff;
@@ -156,7 +160,8 @@ select{
     border-radius: 26px;
     background: #D5E2EB;
     box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3), -3px -3px 2px #0e4e7e;
-
+    -webkit-appearance: none;
+    appearance: none;
 }
 .plan,
 .presentation,
@@ -165,6 +170,7 @@ select{
 .communication,
 .comment{
     font-size: 18px;
+    width: 100%;
 }
 
 .evalution{
@@ -192,7 +198,6 @@ select{
     text-shadow: 2px 2px 3px #556774;
 }
 .comment textarea{
-   width: 100%;
    margin-bottom: 25px;
 }
 /* .btn{
@@ -277,6 +282,7 @@ input[type="range"]::-webkit-slider-thumb {
     outline: none;
     border-radius: 50%;
     box-shadow:  2px 2px 3px rgb(90, 90, 90);
+    border: none;
 }
 
 input[type="range"] + .value {
