--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -138,7 +138,7 @@
     font-size: 18px;
     text-align: center;
     margin-top: 55px;
-    text-shadow: 2px 2px 3px #000;
+    text-shadow: 1px 1px 2px rgb(34, 34, 34);
 }
 .formContainer label {
     color: #ffff;
@@ -178,7 +178,7 @@ select{
     justify-content: space-between;
     align-items: center;
     position: relative;
-    height: 80px;
+    height: 100px;
     margin-bottom: 50px;
 }
 .evalution input {
@@ -195,7 +195,7 @@ select{
     justify-content: center;
 }
 .comment > p{
-    text-shadow: 2px 2px 3px #556774;
+    text-shadow: 1px 1px 2px #556774;
 }
 .comment textarea{
    margin-bottom: 25px;
@@ -229,43 +229,54 @@ select{
 input[type="range"]{
     -webkit-appearance: none;
     background: rgb(253, 252, 252);
-    height: 20px;
+    height: 30px;
     border-radius: 16px;
-    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.7), inset -3px -3px 3px rgb(240, 240, 240);
-    overflow: hidden;
+    /* overflow: hidden; */
     background-image: linear-gradient(#41ff3e 100%, rgb(253, 252, 252));
     background-size: 50% 100%;
     background-repeat: no-repeat;
 }
+.inputRange {
+    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.7), inset -3px -3px 3px rgb(240, 240, 240);
+}
+.inputRange2 {
+    box-shadow: inset 2px 2px 4px #ca662f, inset -3px -3px 3px #feb58d;
+}
+.inputRange::-webkit-slider-thumb{
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(240, 240, 240, 0.3);
+}
+.inputRange2::-webkit-slider-thumb{
+    box-shadow: 2px 2px 3px #ca662f, -1px -1px 2px #feb58d;
+}
 /* set color bar */
 
-input[name ="plan"]::-webkit-slider-thumb{
+/* input[name ="plan"]::-webkit-slider-thumb{
     background-color: #E98284;
-}
+} */
 input[name="plan"]{
     background-image: linear-gradient(#E98284 100%, rgb(253, 252, 252));
 }
-input[name ="presentation"]::-webkit-slider-thumb{
+/* input[name ="presentation"]::-webkit-slider-thumb{
     background-color: #E6A831;
-}
+} */
 input[name="presentation"]{
     background-image: linear-gradient(#E6A831 100%, rgb(253, 252, 252));
 }
-input[name ="code"]::-webkit-slider-thumb{
+/* input[name ="code"]::-webkit-slider-thumb{
     background-color: #8386A9;
-}
+} */
 input[name="code"]{
     background-image: linear-gradient(#8386A9 100%, rgb(253, 252, 252));
 }
-input[name ="design"]::-webkit-slider-thumb{
+/* input[name ="design"]::-webkit-slider-thumb{
     background-color: #A8D257;
-}
+} */
 input[name="design"]{
     background-image: linear-gradient(#A8D257 100%, rgb(253, 252, 252));
 }
-input[name ="communication"]::-webkit-slider-thumb{
+/* input[name ="communication"]::-webkit-slider-thumb{
     background-color: #6CC7D2;
-}
+} */
 input[name="communication"]{
     background-image: linear-gradient(#6CC7D2 100%, rgb(253, 252, 252));
 }
@@ -277,18 +288,19 @@ input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     cursor: ew-resize;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     outline: none;
     border-radius: 50%;
-    box-shadow:  2px 2px 3px rgb(90, 90, 90);
+    /* box-shadow: 2px 2px 3px #ca662f, -1px -1px 2px #feb58d; */
     border: none;
+    background-color: #fff;
 }
 
 input[type="range"] + .value {
     background-color: #fff;
     position: absolute;
-    top: -5px;
+    top: 2px;
     left: 50%;
     transform: translateX(-50%);
     width: 40px;
@@ -297,8 +309,13 @@ input[type="range"] + .value {
     border-radius: 16px;
     text-align: center;
     align-items: center;  
-    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3), -1px -1px 2px #415b6e;
+    /* box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -1px -1px 2px #415b6e; */
 
 
 }
-
+.inputRange + .value{
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -1px -1px 2px #415b6e;
+}
+.inputRange2 + .value{
+    box-shadow: 2px 2px 2px #ca662f, -1px -1px 2px #feb58d;
+}
