--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ code {
 :root{
   --background-color-2: #EDF1F4;
   --background-color-1: #fcf2f0;
+  --header-background-color-1:#A5CFD5;
+  --header-background-color-2:#E7AA9A;
+  --top-shadow-1:#BBE6ED;
+  --top-shadow-2:#EDBFB3;
+  --bottom-shadow-1:#579CA5;
+  --bottom-shadow-2:#D3826C;
+
+
 }
 @font-face {
   font-family: "GenJyuuGothic";
