--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -361,6 +361,7 @@ input[type="range"] + .value {
   border-radius: 16px;
   text-align: center;
   align-items: center;
+  color: #6a5026;
   /* box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3), -1px -1px 2px #415b6e; */
 }
 .inputRange + .value {
