--- a/src/screens/detail.module.css
+++ b/src/screens/detail.module.css
@@ -1,3 +1,8 @@
+.detailContainer{
+    width: 100%;
+    height: 100%;
+    padding: 0 auto;
+}
 .section1{
     display: flex;
     justify-content: space-between;
@@ -31,6 +36,7 @@
 .evalution{
     border-top: 1px solid #000;
     padding: 0 15px;
+    margin-bottom: 20px;
 }
 .subTitle{
     font-size: 18px;
@@ -43,4 +49,12 @@
 h3{
     font-size: 24px;
     font-weight: bold;
+}
+.commentContainer{
+    text-align: left;
+}
+.comment{
+    display: inline-block;
+    max-width: 320px;
+    word-wrap: break-word;
 }
