--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -61,6 +61,7 @@
 .number{
   display: block;
   align-content: center;
+  font-size: 18px;
 }
 .number span{
   display: inline-block;
@@ -213,7 +214,7 @@ select {
      -3px -3px 2px rgba(253, 252, 252, 0.2);
   -webkit-box-shadow: 2px 2px 4px #b4b4b4, -3px -3px 2px rgba(253, 252, 252, 0.2);
   -webkit-appearance: none;
-
+  font-size: 16px;
   border-radius: 6px;
 }
 .comment textarea:focus{
