--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -36,7 +36,7 @@
 .title {
   margin: 15px auto 15px auto;
   text-align: center;
-  font-size: 14px;
+  font-size: 18px;
   display: block;
   width: 90%;
 }
@@ -62,6 +62,7 @@
   display: block;
   align-content: center;
   font-size: 18px;
+  margin: 15px auto;
 }
 .number span{
   display: inline-block;
@@ -72,6 +73,12 @@
   align-content: center;
   line-height: 30px;
   font-weight: 500;
+}
+.studentName{
+  display: block;
+  align-content: center;
+  font-size: 28px;
+  margin: 15px auto;
 }
 .product {
   margin: 60px auto;
@@ -123,7 +130,7 @@
   max-width: 700px;
   height: 100%;
   margin: 0 auto;
-  padding: 15px;
+  padding: 15px 25px;
   top: 100vh;
   position: relative;
   background: rgb(179, 214, 240);
@@ -298,19 +305,19 @@ input[type="range"] {
   margin: 0 16%;
 }
 .plan .datalist span {
-  background-color: rgba(233, 130, 132, 0.3);
+  background-color: rgba(255, 195, 196, 0.3);
 }
 .presentation .datalist span {
-  background-color: rgba(230, 168, 49, 0.3);
+  background-color: rgba(240, 102, 102, 0.3);
 }
 .code .datalist span {
-  background-color: rgba(131, 134, 169, 0.3);
+  background-color: rgba(252, 171, 103, 0.3);
 }
 .design .datalist span {
-  background-color: rgba(168, 210, 87, 0.3);
+  background-color: rgba(255, 252, 20, 0.3);
 }
 .communication .datalist span {
-  background-color: rgba(108, 199, 210, 0.3);
+  background-color: rgba(168, 210, 87, 0.3);
 }
 
 /* set color bar */
@@ -319,32 +326,32 @@ input[type="range"] {
     background-color: #E98284;
 } */
 input[name="plan"] {
-  background-image: linear-gradient(#e98284 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#FFC3C4 100%, rgb(253, 252, 252));
   
 }
 /* input[name ="presentation"]::-webkit-slider-thumb{
     background-color: #E6A831;
 } */
 input[name="presentation"] {
-  background-image: linear-gradient(#e6a831 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#F06666 100%, rgb(253, 252, 252));
 }
 /* input[name ="code"]::-webkit-slider-thumb{
     background-color: #8386A9;
 } */
 input[name="code"] {
-  background-image: linear-gradient(#8386a9 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#FCAB67 100%, rgb(253, 252, 252));
 }
 /* input[name ="design"]::-webkit-slider-thumb{
     background-color: #A8D257;
 } */
 input[name="design"] {
-  background-image: linear-gradient(#a8d257 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#FFFC14 100%, rgb(253, 252, 252));
 }
 /* input[name ="communication"]::-webkit-slider-thumb{
     background-color: #6CC7D2;
 } */
 input[name="communication"] {
-  background-image: linear-gradient(#6cc7d2 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#a8d257 100%, rgb(253, 252, 252));
 }
 
 input[type="range"]::-webkit-slider-thumb {
