--- a/src/screens/list.module.css
+++ b/src/screens/list.module.css
@@ -28,13 +28,14 @@
     border: none;
     background-color: #ffff;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'GenJyuuGothic';
     color: #6A5026;
+    font-weight: bold;
 }
 .btn:nth-child(2){
-    background-color: #1163A1;
-    color: #ffff;
+    background-color: #edf1f4;
+    color: #1163a1;
 }
 
 .list{
