--- a/src/screens/evalution.module.css
+++ b/src/screens/evalution.module.css
@@ -58,13 +58,13 @@
   height: 100%;
   object-fit: cover;
 }
-.number{
+.number {
   display: block;
   align-content: center;
   font-size: 18px;
   margin: 15px auto;
 }
-.number span{
+.number span {
   display: inline-block;
   width: 30px;
   height: 30px;
@@ -74,7 +74,7 @@
   line-height: 30px;
   font-weight: 500;
 }
-.studentName{
+.studentName {
   display: block;
   align-content: center;
   font-size: 28px;
@@ -178,7 +178,6 @@ select {
   appearance: none;
 }
 
-
 .plan,
 .presentation,
 .code,
@@ -217,19 +216,19 @@ select {
   margin-bottom: 25px;
   border: none;
   outline: none;
-  box-shadow:  2px 2px 4px #b4b4b4,
-     -3px -3px 2px rgba(253, 252, 252, 0.2);
-  -webkit-box-shadow: 2px 2px 4px #b4b4b4, -3px -3px 2px rgba(253, 252, 252, 0.2);
+  box-shadow: 2px 2px 4px #b4b4b4, -3px -3px 2px rgba(253, 252, 252, 0.2);
+  -webkit-box-shadow: 2px 2px 4px #b4b4b4,
+    -3px -3px 2px rgba(253, 252, 252, 0.2);
   -webkit-appearance: none;
   font-size: 16px;
   border-radius: 6px;
 }
-.comment textarea:focus{
-    box-shadow: inset 2px 2px 4px #b4b4b4,
+.comment textarea:focus {
+  box-shadow: inset 2px 2px 4px #b4b4b4,
     inset -3px -3px 2px rgba(253, 252, 252, 0.2);
-    -webkit-box-shadow: inset 2px 2px 4px #b4b4b4,
+  -webkit-box-shadow: inset 2px 2px 4px #b4b4b4,
     inset -3px -3px 2px rgba(253, 252, 252, 0.2);
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 /* .btn{
     display: flex;
@@ -278,7 +277,6 @@ input[type="range"] {
     inset -3px -3px 2px rgba(253, 252, 252, 0.2);
 }
 
-
 .inputRange::-webkit-slider-thumb {
   box-shadow: 1px 1px 2px #cecece, -1px -1px 2px #f5f5f5;
 }
@@ -326,26 +324,25 @@ input[type="range"] {
     background-color: #E98284;
 } */
 input[name="plan"] {
-  background-image: linear-gradient(#FFC3C4 100%, rgb(253, 252, 252));
-  
+  background-image: linear-gradient(#ffc3c4 100%, rgb(253, 252, 252));
 }
 /* input[name ="presentation"]::-webkit-slider-thumb{
     background-color: #E6A831;
 } */
 input[name="presentation"] {
-  background-image: linear-gradient(#F06666 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#f06666 100%, rgb(253, 252, 252));
 }
 /* input[name ="code"]::-webkit-slider-thumb{
     background-color: #8386A9;
 } */
 input[name="code"] {
-  background-image: linear-gradient(#FCAB67 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#fcab67 100%, rgb(253, 252, 252));
 }
 /* input[name ="design"]::-webkit-slider-thumb{
     background-color: #A8D257;
 } */
 input[name="design"] {
-  background-image: linear-gradient(#FFFC14 100%, rgb(253, 252, 252));
+  background-image: linear-gradient(#fffc14 100%, rgb(253, 252, 252));
 }
 /* input[name ="communication"]::-webkit-slider-thumb{
     background-color: #6CC7D2;
